# local-iceberg

./: .dockerignore  .env.example  .gitignore  README.md  dockerfile.db  dockerfile.dev  dockerfile.mcp  pyproject.toml
config/: application-local.properties
mcp/: main.py  pydantic_models.py  pyproject.toml  utils.py
notebooks/: example.ipynb  pyproject.toml  utils.py
scripts/: bootstrap_polaris.sh  initialize_catalog.sh  run_all.sh  run_dev.sh  run_mcp.sh  run_polaris.sh  run_postgres.sh
