[project]
name = "local-iceberg-mcp"
version = "0.1.0"
description = "MCP template for interacting with local lake from agents"
authors = [{ name = "Mark Brewer", email = "markweldonbrewer@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.8,<0.116.0",
    "uvicorn>=0.35.0,<0.39.0",
    "pydantic>=2.12.3,<3.0.0",
    "fastmcp>=3.0.0,<4.0.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyspark==3.5.1",
    "pyiceberg>=0.11.1",
]

[tool.uv]
package = false
