[project]
name = "local-iceberg-notebook"
version = "0.1.0"
description = "Jupyter template for interacting with local lake"
authors = [{ name = "Mark Brewer", email = "markweldonbrewer@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-status>=1.80.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyspark==3.5.1",
    "zstandard>=0.25.0",
]

[tool.uv]
package = false
